# talk

./: CMakeLists.txt  LICENSE
doc/: spec.txt  structure
include/talk/: common.h  crypto.h  message.h  nodes.h  parallel.h  pow.h  serialize.h
include/talk/internal/: common.h  crypto.h  parallel.h  serialize.h
src/generic-impl/: message.cpp  parallel.cpp  pow.cpp  threads.cpp
src/generic-impl/crypto/: argon2.cpp  crypto.cpp  plain.cpp
src/generic-impl/nodes/: NewCert.cpp  nodes.cpp
src/headers/: crypto.h
src/headers/crypto/: ed.h  hash.h  kdf.h
src/headers/talk-private/: threads.h
src/impl/: message.cpp
src/impl/crypto/: crypto.cpp  ed.cpp  ed25519.cpp  ed448.cpp  plain.cpp
src/impl/nodes/: nodes.cpp
src/include/: common.h  crypto.h  message.h  nodes.h  serialize.h
src/linux-impl/crypto/: rand.cpp
src/openssl-impl/: threads.cpp
src/openssl-impl/crypto/: EdDSA.cpp  crypto.cpp  ed.cpp  hash.cpp  hashes.cpp  kdf.cpp  kdfs.cpp  sig.cpp
test/: CMakeLists.txt  pow.cpp
test/crypto/: argon2.cpp  base.cpp  sha256.cpp  sha512.cpp
